apps/vaultwarden/components/istio/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - ./pass.rbn.is
      port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - ./pass.rbn.is
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cert-vaultwarden
